# toy_robot_code_challenge

./: .gitignore  CMakeLists.txt  README.md  sample_messy_moveset.txt  sample_moveset.txt
include/: ToyRobotProgram.h  commandexecutor.h  commandlinedisplay.h  direction.h  iRobot.h  inputfilelistener.h  logger.h  movesetparser.h  position.h  robotinputlistener.h  stdRobot.h  tabletop.h  userinputexecutor.h  userinputlistener.h
src/: ToyRobotProgram.cpp  commandexecutor.cpp  commandlinedisplay.cpp  inputfilelistener.cpp  logger.cpp  main.cpp  movesetparser.cpp  robot.cpp  robotinputlistener.cpp  stdRobot.cpp  tabletop.cpp  userinputexecutor.cpp  userinputlistener.cpp
tests/unit_tests/: fixture_testCommandexecutor.h  fixture_testMovesetparser.h  fixture_testRobot.h  fixture_testTable.h  test_commandexecutor.cpp  test_movesetparser.cpp  test_stdrobot.cpp  test_tabletop.cpp
